--- a/Loboteca1/wwwroot/css/AutorIndex.css
+++ b/Loboteca1/wwwroot/css/AutorIndex.css
@@ -14,6 +14,47 @@ body {
     margin-bottom: 20px;
 }
 
+.navbar2 {
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+}
+
+    .navbar2 ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+        .navbar2 ul li {
+            margin: 0 20px;
+            display: flex;
+            align-items: center;
+        }
+
+            .navbar2 ul li img {
+                width: 50px;
+                height: 50px;
+                margin-bottom: 5px;
+                margin-right: 25px;
+            }
+
+            .navbar2 ul li a {
+                color: black;
+                text-decoration: none;
+                font-size: 18px;
+                display: inline-block;
+                text-align: center;
+                margin-right: 35px;
+            }
+
+                .navbar2 ul li a:hover {
+                    background-color: #993333;
+                    border-radius: 5px;
+                }
+
 /* Contenedor de la tabla */
 .table-container {
     width: 80%;
@@ -92,5 +133,24 @@ footer {
     color: white;
     text-align: center;
     padding: 20px;
-    margin-top: 40px;
+    position: fixed; /* Fija el pie de página */
+    bottom: 0; /* Asegura que se quede en la parte inferior */
+    width: 100%; /* Asegura que ocupe todo el ancho de la pantalla */
 }
+
+    footer p {
+        margin: 10px 0;
+    }
+
+.social-icons {
+    margin-top: 10px;
+}
+
+    .social-icons a img {
+        width: 30px;
+        margin: 0 10px;
+    }
+
+        .social-icons a img:hover {
+            opacity: 0.7;
+        }
