--- a/Loboteca1/Views/Login/Login.cshtml
+++ b/Loboteca1/Views/Login/Login.cshtml
@@ -14,7 +14,7 @@
     <div class="login-container">
         <div class="left-panel">
             <!-- Imagen del logo -->
-            <img src="~/images/LogoSinFondo.png" alt="Logo Loboteca" class="logo">
+            <img src="~/images/Logo.png" alt="Logo Loboteca" class="logo">
         </div>
         <div class="right-panel">
             <h2>Iniciar sesión</h2>
