--- a/Loboteca1/wwwroot/css/login.css
+++ b/Loboteca1/wwwroot/css/login.css
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; /* Centra el contenido verticalmente */
+    top: 3px;                  
 }
 
     .right-panel h2 {
