--- a/Loboteca1/Views/Autor/Delete.cshtml
+++ b/Loboteca1/Views/Autor/Delete.cshtml
@@ -1,44 +1,78 @@
 ﻿@model Loboteca1.Models.AutorModel
 
 @{
+    Layout = null;
     ViewData["Title"] = "Eliminar Autor";
 }
 
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <link rel="stylesheet" href="~/css/AutorCreate.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/AutorDelete.css" />
 </head>
+<body>
 
-<h2>@ViewData["Title"]</h2>
+    <!-- Encabezado principal -->
+    <header>
+        <nav class="navbar">
+            <ul class="logo-left">
+                <li>
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
+            </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
+                    <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<h3>¿Está seguro de que desea eliminar este autor?</h3>
+    <main>
+        <section class="formulario-altas">
+            <h2 class="section-title">@ViewData["Title"]</h2>
+            <h3>¿Está seguro de que desea eliminar este autor?</h3>
 
-<div>
-    <h4>Autor</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.apellido_paterno)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.apellido_paterno)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.apellido_materno)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.apellido_materno)
-        </dd>
-    </dl>
+            <div class="detalle-autor">
+                <h4>Detalles del Autor</h4>
+                <hr />
+                <dl class="row">
+                    <dt class="col-sm-4">Nombre</dt>
+                    <dd class="col-sm-8">@Model.nombre</dd>
 
-    <form asp-action="DeleteConfirmed" method="post">
-        <input type="hidden" asp-for="id" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Cancelar</a>
-    </form>
-</div>
+                    <dt class="col-sm-4">Apellido Paterno</dt>
+                    <dd class="col-sm-8">@Model.apellido_paterno</dd>
+
+                    <dt class="col-sm-4">Apellido Materno</dt>
+                    <dd class="col-sm-8">@Model.apellido_materno</dd>
+                </dl>
+            </div>
+
+            <!-- Formulario de eliminación -->
+            <form asp-action="DeleteConfirmed" method="post">
+                <input type="hidden" asp-for="id" />
+                <div class="botones">
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                </div>
+            </form>
+        </section>
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
+        <div class="social-icons">
+            <a href="#"><img src="~/images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="~/images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="~/images/email.png" alt="Correo"></a>
+        </div>
+    </footer>
+
+</body>
+</html>
