--- a/Loboteca1/Views/Autor/Index.cshtml
+++ b/Loboteca1/Views/Autor/Index.cshtml
@@ -15,16 +15,26 @@
 <body>
     <!-- Barra de navegación -->
     <header>
-        <nav class="navbar">
-            <h1>Loboteca - Listado de Autores</h1>
-        </nav>
+  
 
         <nav class="navbar2">
-            <ul>
-                <li><img src="~/images/libros.png" alt="Libros Electrónicos" class="libros"><a href="@Url.Action("Libros", "Libros")">Libros</a></li>
-                <li><img src="~/images/sanciones.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
-                <li><img src="~/images/login.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
+
+            <ul class="logo-left">
+                <li>
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
             </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
+                    <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
+                </li>
+            </ul>
+        </nav>
+
+        <nav class="navbar">
+            <h2>Loboteca - Listado de Autores</h2>
         </nav>
     </header>
 
