--- a/Loboteca1/wwwroot/css/AutorEdit.css
+++ b/Loboteca1/wwwroot/css/AutorEdit.css
@@ -18,7 +18,6 @@ body {
 
     .navbar h1 {
         color: white;
-        text-align: center;
         margin: 0;
         margin-left: 1.5cm;
     }
@@ -78,8 +77,14 @@ body {
             }
 
 /* Contenido principal */
-.main-section {
-    padding: 20px;
+.formulario-altas {
+    width: 50%;
+    margin: 40px auto;
+    padding: 30px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 h2.section-title {
@@ -88,57 +93,55 @@ h2.section-title {
     margin-bottom: 20px;
 }
 
-/* Contenedor del formulario */
-.formulario-altas {
-    width: 50%;
-    margin: 20px auto;
-    padding: 30px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+.form-group {
+    margin-bottom: 15px;
 }
 
-    .formulario-altas label {
-        display: block;
+    .form-group label {
         font-size: 18px;
         margin-bottom: 10px;
         color: #781c2e;
     }
 
-    .formulario-altas input[type="text"] {
+    .form-group input {
         width: 100%;
         padding: 10px;
-        margin-bottom: 15px;
         border: 1px solid #ccc;
         border-radius: 5px;
     }
 
-    .formulario-altas .text-danger {
-        color: #d9534f;
-    }
+.text-danger {
+    color: #d9534f;
+}
 
 /* Botones */
 .botones {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    margin-top: 20px;
 }
 
-.btn-success, .btn-secondary {
-    background-color: #781c2e;
-    color: white;
+.btn {
     padding: 10px 20px;
-    border: none;
     border-radius: 5px;
+    border: none;
     cursor: pointer;
     font-size: 14px;
-    text-decoration: none;
 }
 
-    .btn-success:hover, .btn-secondary:hover {
-        background-color: #993333;
-    }
+.btn-primary {
+    background-color: #781c2e;
+    color: white;
+}
 
+.btn-secondary {
+    background-color: #993333;
+    color: white;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
 
 /* Footer */
 footer {
