--- a/Loboteca1/wwwroot/css/AutorIndex.css
+++ b/Loboteca1/wwwroot/css/AutorIndex.css
@@ -5,55 +5,87 @@ body {
     background-color: #f2f2f2;
 }
 
-/* Barra de navegación */
-.navbar {
-    background-color: #781c2e;
-    padding: 10px;
+
+.navbar h2 {
     text-align: center;
-    color: white;
+    color: #781c2e;
     margin-bottom: 20px;
 }
 
+/* Barra de navegación */
 .navbar2 {
-    padding: 10px;
-    text-align: center;
-    background-color: white;
+    background-color: #781c2e;
+    padding: 30px;
+    color: white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-    .navbar2 ul {
-        list-style: none;
-        padding: 0;
+    .navbar2 h1 {
+        color: white;
+        text-align: center;
         margin: 0;
-        display: flex;
-        justify-content: center;
+        margin-left: 1.5cm;
     }
 
-        .navbar2 ul li {
-            margin: 0 20px;
-            display: flex;
-            align-items: center;
+.logo-left {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 10px;
+    top: 3px;
+}
+
+.logo {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+}
+
+.account-right {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 20px;
+    top: 16px;
+}
+
+    .account-right li {
+        margin: 0 20px;
+        display: flex;
+        align-items: center;
+    }
+
+        .account-right li img {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
         }
 
-            .navbar2 ul li img {
-                width: 50px;
-                height: 50px;
-                margin-bottom: 5px;
-                margin-right: 25px;
+        .account-right li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            display: inline-block;
+            text-align: center;
+        }
+
+            .account-right li a:hover {
+                background-color: #D291BC;
+                border-radius: 5px;
+                padding: 5px;
             }
 
-            .navbar2 ul li a {
-                color: black;
-                text-decoration: none;
-                font-size: 18px;
-                display: inline-block;
-                text-align: center;
-                margin-right: 35px;
-            }
 
-                .navbar2 ul li a:hover {
-                    background-color: #993333;
-                    border-radius: 5px;
-                }
+
 
 /* Contenedor de la tabla */
 .table-container {
