--- a/Loboteca1/Views/Libro/Index.cshtml
+++ b/Loboteca1/Views/Libro/Index.cshtml
@@ -20,7 +20,7 @@
             <th>@Html.DisplayNameFor(model => model.estado)</th>
             <th>@Html.DisplayNameFor(model => model.stock)</th>
             <th>@Html.DisplayNameFor(model => model.fecha_de_alta)</th>
-            <th>@Html.DisplayNameFor(model => model.ruta_imagen)</th>
+            <th>Imagen</th>
             <th>Editorial</th>
             <th>Acciones</th>
         </tr>
