--- a/Loboteca1/Views/Inicio.cshtml
+++ b/Loboteca1/Views/Inicio.cshtml
@@ -19,9 +19,8 @@
 
         <nav class="navbar2">
             <ul>
-                <li><img src="~/images/libros.png" alt="Libros Electronicos" class="libros"><a href="@Url.Action("Libros", "Libros")">Libros</a></li>
-                <li><img src="~/images/sanciones.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">sanciones</a></li>
-                <li><img src="~/images/login.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
+           
+                <li><img src="~/images/ingresar.png" alt="Login" class="login"><a href="@Url.Action("Login", "Login")">Login</a></li>
             </ul>
         </nav>
     </header>
