--- a/Loboteca1/Views/Libro/Create.cshtml
+++ b/Loboteca1/Views/Libro/Create.cshtml
@@ -58,38 +58,12 @@
         <span asp-validation-for="id_editorial" class="text-danger"></span>
     </div>
 
-    <!--<div class="form-group">
-        <label for="imagen" class="control-label">Seleccionar Imagen</label>
-        <input type="file" id="imagen" name="imagen" class="form-control" onchange="obtenerRutaImagen(event)" />
-        <img id="previsualizacion" src="" alt="Previsualización de la imagen" style="max-width: 200px; display: none;" />
-        <input asp-for="ruta_imagen" type="hidden" />
-    </div>-->
-
     <div class="form-group">
-        <label asp-for="ruta_imagen" class="control-label">Imagen</label>
-        <input asp-for="ruta_imagen" class="form-control" />
-        <span asp-validation-for="ruta_imagen" class="text-danger"></span>
+        <label for="imagen" class="control-label">Seleccionar Imagen</label>
+        <input type="file" id="imagen" name="imagen" class="form-control" />
     </div>
 
     <div class="form-group">
         <input type="submit" value="Crear" class="btn btn-primary" />
     </div>
 </form>
-
-@section Scripts {
-    <script type="text/javascript">
-        function obtenerRutaImagen(event) {
-            var input = event.target;
-            var path = input.value;
-            document.querySelector('input[name="ruta_imagen"]').value = path;
-
-            var reader = new FileReader();
-            reader.onload = function () {
-                var output = document.getElementById('previsualizacion');
-                output.src = reader.result;
-                output.style.display = 'block';
-            };
-            reader.readAsDataURL(input.files[0]);
-        }
-    </script>
-}
